Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.3
-
None
-
Windows
-
-
d2648237c7e3bfc03077b7b1e63c72dc24ff519c (qt/qtvirtualkeyboard/5.15)
-
Q1/2020 Finale
Description
STEPS TO REPRODUCE:
- Set focus on input text.
- Wait shown virtual keyboard
- Type word and add "dot"/"point".
EXPECTED RESULT:
Keyboard Alphabets should not change to capital letters when clicked on dot.
ACTUAL RESULT:
Keyboard Alphabets change to capital letters when clicked on dot.
REPRODUCIBILITY:
100%
Attachments
Issue Links
- relates to
-
QT3DS-3308 Support customer project X
-
- In Progress
-